--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white px-5 py-4 custom-navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white px-lg-5 py-lg-4 custom-navbar">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="#">Travel <span>Wild</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
