--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-5 text-lg-center">
+          <div class="col-md-5">
             <h1>Adventure</h1>
             <h2>Get In The Wild</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur necessitatibus earum itaque in nesciunt modi saepe obcaecati. Ratione, tempora eius?</p>
